# GraphSignal

./: .gitignore  README.md  pyproject.toml
graphsignal/: __init__.py  config.py
graphsignal/data/: __init__.py  _fetch.py  _storage.py  events.py  ingest.py  prices.py  reference.py
graphsignal/data/universe/: __init__.py  _build.py  etf_candidates.csv  etfs.csv  sp500.csv
tests/: conftest.py  test_phase0_components.py  test_phase0_failures.py  test_phase0_workflow.py  test_prices.py  test_smoke.py  test_universe.py
